# crdb-changefeed-publisher

./: Cargo.toml  Dockerfile  LICENSE  README.md  cli.yml  rust-toolchain.toml
.github/workflows/: build.yml  clippy.yml
.kube/: deployment.yml  service.yml
src/: cursors.rs  error.rs  lib.rs  main.rs  metrics.rs  model.rs  queue_buffer.rs  queues.rs
tests/: integration.rs
