[package]
name = "crdb-changefeed-publisher"
version = "0.1.0"
authors = ["Joe Burnard <github.com/ducc>"]
edition = "2018"

[dependencies]
futures-executor = "0.3.5"
futures-util = "0.3.5"
lapin = "1.2.1"
log = "0.4.11"
env_logger = "0.7.1"
tokio-amqp = "0.1.3"
tokio = { version = "1.20.1", features = ["macros", "io-util", "time"] }
tracing = "0.1.17"
tracing-subscriber = "0.2.8"
#tracing-futures = "0.2.4"
tracing-log = "0.1.1"
prometheus = {version = "0.13.1", features= ["process"]}
lazy_static = "1.4.0"
prometheus_exporter = "0.8.4"
warp = "0.3.2"
sqlx = { version = "0.6.1", default_features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time", "bigdecimal", "json", "macros", "migrate"] }
serde_json = "1.0"
serde = "1.0"
futures = "0.3.5"
async-trait = "0.1.36"
clap = { version = "2.33", features = ["yaml"] }
regex = "1"
aws-sdk-sqs = "0.17.0"
aws-config = "0.47.0"
uuid = {version = "1.2.2", features = ["v4"]}
aws-smithy-http = "0.47.0"

[patch]
#pin-project-internal = "1.0.12"